Navbar contact LinkButton fixed & Global styles spacing refactored & Home purpose section space y fixed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -83,6 +83,12 @@
 }
 
 @layer utilities {
+  /* Spacing */
+
+    .py-section {
+      @apply py-24;
+    }
+
   /* Typography */
 
   .h2s {
